--- a/VAD-CIDI/angular.json
+++ b/VAD-CIDI/angular.json
@@ -3,7 +3,7 @@
   "version": 1,
   "newProjectRoot": "projects",
   "projects": {
-    "VAD-CIDI": {
+    "VAD-CICD": {
       "root": "",
       "sourceRoot": "src",
       "projectType": "application",
@@ -13,7 +13,7 @@
         "build": {
           "builder": "@angular-devkit/build-angular:browser",
           "options": {
-            "outputPath": "dist/VAD-CIDI",
+            "outputPath": "dist/VAD-CICD",
             "index": "src/index.html",
             "main": "src/main.ts",
             "polyfills": "src/polyfills.ts",
@@ -57,18 +57,18 @@
         "serve": {
           "builder": "@angular-devkit/build-angular:dev-server",
           "options": {
-            "browserTarget": "VAD-CIDI:build"
+            "browserTarget": "VAD-CICD:build"
           },
           "configurations": {
             "production": {
-              "browserTarget": "VAD-CIDI:build:production"
+              "browserTarget": "VAD-CICD:build:production"
             }
           }
         },
         "extract-i18n": {
           "builder": "@angular-devkit/build-angular:extract-i18n",
           "options": {
-            "browserTarget": "VAD-CIDI:build"
+            "browserTarget": "VAD-CICD:build"
           }
         },
         "test": {
@@ -102,7 +102,7 @@
         }
       }
     },
-    "VAD-CIDI-e2e": {
+    "VAD-CICD-e2e": {
       "root": "e2e/",
       "projectType": "application",
       "prefix": "",
@@ -111,11 +111,11 @@
           "builder": "@angular-devkit/build-angular:protractor",
           "options": {
             "protractorConfig": "e2e/protractor.conf.js",
-            "devServerTarget": "VAD-CIDI:serve"
+            "devServerTarget": "VAD-CICD:serve"
           },
           "configurations": {
             "production": {
-              "devServerTarget": "VAD-CIDI:serve:production"
+              "devServerTarget": "VAD-CICD:serve:production"
             }
           }
         },
@@ -131,5 +131,5 @@
       }
     }
   },
-  "defaultProject": "VAD-CIDI"
+  "defaultProject": "VAD-CICD"
 }
